deployment/processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  labels:
    app: processor
    env: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
        env: demo
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "processor"
        dapr.io/port: "8081"
        dapr.io/log-as-json: "true"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: user-container
        image: mchmarny/processor:v0.7.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
