deployment/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  labels:
    app: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "producer"
        dapr.io/port: "8081"
    spec:
      containers:
      - name: node
        image: mchmarny/producer:v0.3.1
        ports:
        - containerPort: 8081
