deployment/sentimenter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimenter
  labels:
    app: sentimenter
    env: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentimenter
  template:
    metadata:
      labels:
        app: sentimenter
        env: demo
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "sentimenter"
        dapr.io/port: "8082"
        dapr.io/log-as-json: "true"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: user-container
        image: mchmarny/sentimenter:v0.6.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
