deployment/viewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewer
  labels:
    app: viewer
    env: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewer
  template:
    metadata:
      labels:
        app: viewer
        env: demo
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "viewer"
        dapr.io/port: "8083"
        dapr.io/log-as-json: "true"
        dapr.io/config: "tracing"
    spec:
      containers:
      - name: user-container
        image: mchmarny/viewer:v0.7.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
