deployment/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
