deployment/viewer-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: viewer
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viewer
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: dapr.thingz.io
    http:
      paths:
      - backend:
          serviceName: viewer
          servicePort: 80
        path: /
